tests/errors/type_info_pointer_01.f90
program type_info_pointer_01
    implicit none
    type(type_info), pointer :: t
end program type_info_pointer_01
